--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -15,18 +15,17 @@
       <!-- BreadCrumbs -->
       <app-breadcrumbs></app-breadcrumbs>
       <!-- Sistema de rutas -->
+      <router-outlet></router-outlet>
       <!-- ============================================================== -->
       <!-- Start Page Content -->
       <!-- ============================================================== -->
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-12">
           <div class="card">
-            <div class="card-body">
-              <router-outlet></router-outlet>
-            </div>
+            <div class="card-body"></div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- ============================================================== -->
       <!-- End Page Content -->
       <!-- ============================================================== -->
