--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -358,7 +358,9 @@
               </li>
               <li role="separator" class="divider"></li>
               <li>
-                <a routerLink="/login"><i class="fa fa-power-off"></i>Logout</a>
+                <a (click)="logout()" style="cursor: pointer"
+                  ><i class="fa fa-power-off"></i>Logout</a
+                >
               </li>
             </ul>
           </div>
