--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,9 @@
 #themecolors .selector {
   cursor: pointer;
 }
+#google-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
