--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,9 @@
   align-items: center;
   text-align: center;
 }
+.img-avatar {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
