Subir imagen modal

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -48,3 +48,4 @@
 <!-- ============================================================== -->
 <!-- END Main wrapper - style you can find in pages.scss -->
 <!-- ============================================================== -->
+<app-modal-imagen></app-modal-imagen>
