--- a/src/styles.css
+++ b/src/styles.css
@@ -19,3 +19,26 @@
   border-radius: 50%;
   margin-bottom: 20px;
 }
+.w100 {
+  width: 100px;
+}
+.w180 {
+  width: 180px;
+}
+.avatar {
+  width: 50px;
+  border-radius: 100%;
+  border: 2px solid grey;
+}
+.fondo-modal-imagen {
+  background-color: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+}
+.oculto {
+  display: none;
+}
