Validacion de role

--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -32,7 +32,7 @@
                 id="exampleInputEmail1"
                 placeholder="Email del usuario"
                 formControlName="email"
-                [readOnly]="usuario.google"
+                [readOnly]="!usuario.google"
               />
             </div>
           </div>
